<resources>
    <string name="app_name">Breaking News</string>
    <string name="empty">No News found.</string>
    <string name="internet">No internet connection.</string>
    <string name="settings_menu_item1">Settings</string>
    <string name="settings_menu_item2">Refresh</string>
    <string name="settings_title">Settings</string>

    <!-- String for limit number News -->
    <string name="news_limit_setting">News limit [1-50]</string>
    <string name="news_limit_key" translatable="false">page_size</string>
    <string name="news_limit_default" translatable="false">10</string>

    <!-- String for Custom from date-->
    <string name="from_date_setting">News from date [yyyy-mm-dd]</string>
    <string name="from_date_key" translatable="false">from_date</string>
    <string name="from_date_default" translatable="false">"2018-01-01"</string>

    <!-- Strings For Category Preference -->
    <string name="settings_category_label">Category: e.g. all, science, sport, world, politics, education.</string>
    <string name="settings_category_key" translatable="false">category</string>
    <string name="settings_category_default" translatable="false">science</string>

    <!-- Strings For Order-By preference -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_newest_value</string>

    <!-- Preferences: Order-By newest -->
    <string name="settings_newest_label">Newest</string>
    <string name="settings_newest_value" translatable="false">newest</string>
    <string name="settings_newest_default" translatable="false">newest</string>

    <!-- Preferences: Order-By Oldest -->
    <string name="settings_oldest_label">Oldest</string>
    <string name="settings_oldest_value" translatable="false">oldest</string>
    <string name="settings_oldest_default" translatable="false">oldest</string>

</resources>
