<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_category_default"
        android:inputType="text"
        android:key="@string/settings_category_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_category_label" />

    <EditTextPreference
        android:defaultValue="@string/from_date_default"
        android:inputType="date"
        android:key="@string/from_date_key"
        android:selectAllOnFocus="true"
        android:title="@string/from_date_setting"/>

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_labels"
        android:entryValues="@array/settings_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/news_limit_default"
        android:inputType="numberDecimal"
        android:key="@string/news_limit_key"
        android:selectAllOnFocus="true"
        android:title="@string/news_limit_setting"/>

</PreferenceScreen>